// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sandbox/Filter Button smoke-test 1`] = `
.c0 {
  display: block;
  outline: none;
  border: none;
  padding: 9px 24px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  border-radius: 2000px;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  color: #858585;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  background-color: rgba(0,0,0,0.04);
  color: #474747;
  cursor: default;
}

.c0:hover {
  color: #474747;
}

@media (max-width:743px) {

}

@media (max-width:743px) {
  .c0 {
    padding: 5px 16px;
  }
}

@media (max-width:743px) {

}

@media (max-width:743px) {

}

<div data-dark="false">
  <button class="c0">
    Label
  </button>
</div>
`;

exports[`Sandbox/Filter Default smoke-test 1`] = `
.c3 {
  display: block;
  outline: none;
  border: none;
  padding: 9px 24px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  border-radius: 2000px;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  color: #858585;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
}

.c3:hover {
  color: #474747;
}

.c1 {
  display: block;
  outline: none;
  border: none;
  padding: 9px 24px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  border-radius: 2000px;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  color: #858585;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
}

.c1:hover {
  color: #474747;
}

.c2 {
  display: block;
  outline: none;
  border: none;
  padding: 9px 24px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  border-radius: 2000px;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  color: #858585;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  background-color: rgba(0,0,0,0.04);
  color: #474747;
  cursor: default;
}

.c2:hover {
  color: #474747;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:743px) {
  .c3 {
    padding: 5px 16px;
  }
}

@media (max-width:743px) {
  .c1 {
    padding: 5px 16px;
  }
}

@media (max-width:743px) {
  .c2 {
    padding: 5px 16px;
  }
}

<div data-dark="false">
  <div class="c0">
    <a href="/0">
      <span class="c1">
        新しい順
      </span>
    </a>
    <span class="c2">
      古い順
    </span>
    <button class="c3">
      人気順
    </button>
    <a href="/3">
      <span class="c1">
        これはリンク
      </span>
    </a>
    <button class="c3">
      これはボタン
    </button>
  </div>
</div>
`;

exports[`Sandbox/Filter Link smoke-test 1`] = `
.c0 {
  display: block;
  outline: none;
  border: none;
  padding: 9px 24px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  border-radius: 2000px;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  color: #858585;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  background-color: rgba(0,0,0,0.04);
  color: #474747;
  cursor: default;
}

.c0:hover {
  color: #474747;
}

@media (max-width:743px) {

}

@media (max-width:743px) {

}

@media (max-width:743px) {

}

@media (max-width:743px) {
  .c0 {
    padding: 5px 16px;
  }
}

<div data-dark="false">
  <span class="c0">
    Label
  </span>
</div>
`;
